# showdown-draft-league

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  temp.html  tmp.json
backend/: .gitignore  build.gradle  run.ps1  settings.gradle
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite-env.d.ts  vite.config.js
frontend/pages/: DraftHistory.tsx
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/api/: api.ts  data_interfaces.ts  interfaces.ts  request_interfaces.ts  response_interfaces.ts
frontend/src/componenets/: draftCards.jsx  draftCards.tsx  filter.jsx  league-data.jsx  navbar.jsx  navbar.tsx  playerScedhule.jsx  roster.jsx  score.jsx  score.tsx  standings-table.jsx  standings-table.tsx
frontend/src/components/: DashboardSchedule.tsx  DashboardStandings.tsx  DefensiveTypeChart.tsx  FullDraftView.tsx  FullScreenDraftModal.tsx  FullScreenModal.tsx  GlobalNavLinks.tsx  Layout.tsx  LeagueDropdown.tsx  LeagueSubNav.tsx  Modal.tsx  PlayerDraftCard.tsx  PlayerProfileModal.tsx  PokemonListItem.tsx  PokemonRosterList.tsx  SpeedTable.tsx  TeamPokemonView.tsx  ToggleSwitch.tsx  UserAuthSection.tsx  WishlistDisplay.tsx  draftCards.tsx  filter.tsx  league-data.tsx  navbar.tsx  playerScedhule.tsx  roster.tsx  score.tsx  standings-table.tsx
frontend/src/context/: DraftHistoryContext.tsx  LeagueContext.tsx  UserContext.tsx
frontend/src/hooks/: useDraftTimer.ts  useWishlist.ts
frontend/src/pages/: CreateLeague.tsx  Dashboard.tsx  DraftHistory.tsx  Draftboard.tsx  JoinLeague.tsx  Login.tsx  MyLeagues.tsx  Teamsheets.tsx  dashboard.jsx  dashboard.tsx  draftboard.jsx  draftboard.tsx  login.jsx  login.tsx  teamsheets.tsx
frontend/src/services/: api.ts
frontend/src/utils/: draftUtils.ts  nameFormatter.ts  scheduleUtils.ts  standingsUtils.ts  typeChart.ts  (+1 more)
new-backend/: .gitignore  AGENTS.md  Dockerfile  PascalCase.py  fix-columntag.py  go.mod  go.sum  run.sh  stop  typescript
new-backend/cmd/: main.go
new-backend/scripts/: import_pokemon_species.go  pokeAPI-scraper.py  sort_pokemon_json_dump.py
(+151 files in other folders)
